// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generate creates a proptype output from a nested input pattern 1`] = `
"/*
AUTO-GENERATED EDIT AT YOUR OWN PERIL:
These propTypes were auto-generated from the TypeScript definitions in: ../interface.ts
*/

import PropTypes from 'prop-types';

export const TestInterface = {
	booleanField: PropTypes.bool.isRequired,
	numericField: PropTypes.number.isRequired,
	objectField: PropTypes.shape({
		booleanField: PropTypes.bool.isRequired,
		numericField: PropTypes.number.isRequired,
	}).isRequired,
};
"
`;

exports[`generate creates a proptype output from a type input file 1`] = `
"/*
AUTO-GENERATED EDIT AT YOUR OWN PERIL:
These propTypes were auto-generated from the TypeScript definitions in: ../type.ts
*/

import PropTypes from 'prop-types';

export const TestType = {
	booleanField: PropTypes.bool.isRequired,
	numericField: PropTypes.number.isRequired,
	objectField: PropTypes.shape({
		booleanField: PropTypes.bool.isRequired,
		numericField: PropTypes.number.isRequired,
	}).isRequired,
};
"
`;

exports[`generate creates a proptype output from an input pattern 1`] = `
"/*
AUTO-GENERATED EDIT AT YOUR OWN PERIL:
These propTypes were auto-generated from the TypeScript definitions in: ../interface.ts
*/

import PropTypes from 'prop-types';

export const TestInterface = {
	booleanField: PropTypes.bool.isRequired,
	numericField: PropTypes.number.isRequired,
	objectField: PropTypes.shape({
		booleanField: PropTypes.bool.isRequired,
		numericField: PropTypes.number.isRequired,
	}).isRequired,
};
"
`;

exports[`generate creates a proptype output from an interface input file 1`] = `
"/*
AUTO-GENERATED EDIT AT YOUR OWN PERIL:
These propTypes were auto-generated from the TypeScript definitions in: ../interface.ts
*/

import PropTypes from 'prop-types';

export const TestInterface = {
	booleanField: PropTypes.bool.isRequired,
	numericField: PropTypes.number.isRequired,
	objectField: PropTypes.shape({
		booleanField: PropTypes.bool.isRequired,
		numericField: PropTypes.number.isRequired,
	}).isRequired,
};
"
`;

exports[`generate places output in provided outputPath 1`] = `
"/*
AUTO-GENERATED EDIT AT YOUR OWN PERIL:
These propTypes were auto-generated from the TypeScript definitions in: ../../test/fixtures/interface.ts
*/

import PropTypes from 'prop-types';

export const TestInterface = {
	booleanField: PropTypes.bool.isRequired,
	numericField: PropTypes.number.isRequired,
	objectField: PropTypes.shape({
		booleanField: PropTypes.bool.isRequired,
		numericField: PropTypes.number.isRequired,
	}).isRequired,
};
"
`;
